--- a/docs/src/man/man9/classicladder.9.adoc
+++ b/docs/src/man/man9/classicladder.9.adoc
@@ -27,25 +27,25 @@ the outputs.
 
 == PINS
 
-*classicladder.0.in-*_NN_ IN bit::
-  These bit signal pins map to *%I*_NN_ variables in ClassicLadder.
-*classicladder.0.out-*_NN_ OUT bit::
-  These bit signal pins map to *%Q*_NN_ variables in ClassicLadder.
+**classicladder.0.in-**_NN_ IN bit::
+  These bit signal pins map to **%I**_NN_ variables in ClassicLadder.
+**classicladder.0.out-**_NN_ OUT bit::
+  These bit signal pins map to **%Q**_NN_ variables in ClassicLadder.
   Output from ClassicLadder.
-*classicladder.0.s32in-*_NN_ IN s32::
+**classicladder.0.s32in-**_NN_ IN s32::
   Integer input from ClassicLadder. These s32 signal pins map to
-  *%IW*_NN_ variables in ClassicLadder.
-*classicladder.0.s32out-*_NN_ OUT s32::
+  **%IW**_NN_ variables in ClassicLadder.
+**classicladder.0.s32out-**_NN_ OUT s32::
   Integer output from ClassicLadder. These s32 signal pins map to
-  *%QW*_NN_ variables in ClassicLadder.
-*classicladder.0.floatin-*_NN_ IN float::
+  **%QW**_NN_ variables in ClassicLadder.
+**classicladder.0.floatin-**_NN_ IN float::
   Integer input from ClassicLadder. These float signal pins map to
-  *%IF*_NN_ variables in ClassicLadder. These are truncated to S32
+  **%IF**_NN_ variables in ClassicLadder. These are truncated to S32
   values internally. eg 7.5 will be 7.
-*classicladder.0.floatout-*_NN_ OUT float::
+**classicladder.0.floatout-**_NN_ OUT float::
   Float output from ClassicLadder. These float signal pins map to
-  *%QF*_NN_ variables in ClassicLadder.
-*classicladder.0.hide_gui IN bit*::
+  **%QF**_NN_ variables in ClassicLadder.
+**classicladder.0.hide_gui** IN bi**::
   This bit pin hides the ClassicLadder window, while still having the
   non-realtime code run. This is usually desirable when modbus is used,
   as modbus requires the non-realtime code to run.
