--- a/docs/src/man/man9/encoder_ratio.9.adoc
+++ b/docs/src/man/man9/encoder_ratio.9.adoc
@@ -6,7 +6,7 @@ encoder_ratio - an electronic gear to synchronize two axes
 
 == SYNOPSIS
 
-*loadrt encoder_ratio [num_chan=*_num_* | names=*_name1_*[,*_name2..._*]]*
+**loadrt encoder_ratio [num_chan=**_num_** | names=**_name1_**[,**_name2..._**]]**
 
 == DESCRIPTION
 
@@ -41,18 +41,18 @@ The *encoder-ratio.N.* format is shown in the following descriptions.
 
 == PINS
 
-*encoder-ratio._N_*.master-A* bit in*::
+**encoder-ratio.**__N__**.master-A** bit in::
    +
 
-*encoder-ratio._N_*.master-B* bit in*::
+**encoder-ratio.**_N_**.master-B** bit in::
    +
 
-*encoder-ratio._N_*.slave-A* bit in*::
+**encoder-ratio.**_N_**.slave-A** bit in::
    +
 
-*encoder-ratio._N_*.slave-B* bit in*::
+**encoder-ratio.**_N_**.slave-B** bit in::
   The encoder channels of the master and slave axes
-*encoder-ratio._N_*.enable* bit in*::
+**encoder-ratio.**_N_**.enable** bit in::
   When the enable pin is FALSE, the error pin simply reports the slave
   axis position, in revolutions. As such, it would normally be connected
   to the feedback pin of a PID block for closed loop control of the
@@ -63,20 +63,20 @@ The *encoder-ratio.N.* format is shown in the following descriptions.
   master teeth to slave teeth. As the master moves, error becomes
   non-zero, and the PID loop will drive the slave axis to track the
   master.
-*encoder-ratio._N_*.error* float out*::
+**encoder-ratio.**_N_**.error** float out::
   The error in the position of the slave (in revolutions)
 
 == PARAMETERS
 
-*encoder-ratio.N.master-ppr unsigned rw*::
+**encoder-ratio.**_N_**.master-ppr** unsigned rw::
    +
 
-*encoder-ratio.N.slave-ppr unsigned rw*::
+**encoder-ratio.**_N_**.slave-ppr** unsigned rw::
   The number of pulses per revolution of the master and slave axes
-*encoder-ratio.N.master-teeth unsigned rw*::
+**encoder-ratio.**_N_**.master-teeth** unsigned rw::
    +
 
-*encoder-ratio.N.slave-teeth unsigned rw*::
+**encoder-ratio.**_N_**.slave-teeth** unsigned rw::
   The number of "teeth" on the master and slave gears.
 
 == SEE ALSO
