--- a/docs/src/man/man9/hal_bb_gpio.9.adoc
+++ b/docs/src/man/man9/hal_bb_gpio.9.adoc
@@ -18,8 +18,8 @@ Linux.
 
 === PINS
 
-*bb_gpio.userled*_N_ bit in +
-*bb_gpio.userled*_N_*-invert* bit in::
+**bb_gpio.userled*_N_ bit in +
+**bb_gpio.userled*_N_*-invert* bit in::
   The associated LED is lit if *userled*_N_ xor *userled*_N_-invert is
   TRUE.
 
@@ -37,10 +37,11 @@ system.
 
 === PINS
 
-*bb_gpio.p*_N_*.in-*_NN_ bit out +
-*bb_gpio.p*_N_*.in-*_NN_*-invert* bit in::
-  *in-*_NN_ is a snapshot of the value of the corresponding physical pin
-  XOR the value of the corresponding *in-*_NN_*-invert* pin.
+**bb_gpio.p**_N_**.in-**_NN_ bit out +
+
+**bb_gpio.p**_N_**.in-**_NN_**-invert** bit in::
+  **in-**_NN_ is a snapshot of the value of the corresponding physical pin
+  XOR the value of the corresponding **in-**_NN_**-invert** pin.
 
 == OUTPUT PINS
 
@@ -54,10 +55,11 @@ system.
 
 === PINS
 
-*bb_gpio.p*_N_*.out-*_NN_ bit out +
-*bb_gpio.p*_N_*.out-*_NN_*-invert* bit in::
-  The corresponding physical pin is driven with the result of *in-*_NN_
-  xor *in-*_NN_*-invert*.
+**bb_gpio.p**_N_**.out-**_NN_ bit out +
+
+**bb_gpio.p**_N_**.out-**_NN_**-invert** bit in::
+  The corresponding physical pin is driven with the result of **in-**_NN_
+  xor **in-**_NN_**-invert**.
 
 == PARAMETERS
 
@@ -65,9 +67,9 @@ None
 
 == FUNCTIONS
 
-*bb_gpio.read*::
+**bb_gpio.read**::
   Update HAL pins from physical pins.
-*bb_gpio.write*::
+**bb_gpio.write**::
   Update physical pins from HAL pins.
 
 == LICENSE
