--- a/docs/src/man/man1/gmoccapy.1.adoc
+++ b/docs/src/man/man1/gmoccapy.1.adoc
@@ -10,8 +10,8 @@ gmoccapy - TOUCHY LinuxCNC Graphical User Interface
 
 == DESCRIPTION
 
-*GMOCCAPY* is one of the Graphical User Interfaces (GUI) for LinuxCNC It
-gets run by the runscript usually.
+*GMOCCAPY* is one of the Graphical User Interfaces (GUI) for LinuxCNC.
+It gets run by the runscript usually.
 
 == OPTIONS
 
